[package]
name = "patoz"
version = "0.1.1-alpha.0"
edition = "2018"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
description = "Protein Data Bank (pdb) File Parser"
homepage = "https://github.com/orhanbalci"
repository = "https://github.com/orhanbalci/patoz.git"
keywords = ["parser","nom", "pdb", "bioinformatics", "science"]
license = "MIT"
exclude = ["pdb-harvester", "grcov.yml", "pdb_harvester"]
documentation = "http://docs.rs/patoz/0.1.0"
readme = "README.md"

[dependencies]
nom = "5.0.1"
chrono = "0.4"
itertools = "0.8"

[dev-dependencies]
serde_json="1.0"
