[package]
name = "pdb-harvester"
version = "0.1.0"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
url = "2.1.1"
rayon = "1.3.0"
